@@ -159,7 +159,7 @@ sub new {
 	if ( my $file = $args{'config_file'} ) {
 		$self = bless {%$initial}, $class;
 		$self->read_config_file($file);			# user specified config
-		$self->$_( map { /^(.+)$/; $1 } $self->$_ )	# untaint config values
+		$self->$_( map /^(.+)$/ ? $1 : (), $self->$_ )	# untaint config values
 				for (qw(nameservers domain searchlist));
 	} else {
 		$class->init() unless $init;			# system-wide config
@@ -182,7 +182,11 @@ sub new {
 		}
 	}
 
-	%$base = %$self unless $init;				# default configuration
+	return $self if $init;
+								# define default configuration
+	$self->searchlist( $self->domain || () ) unless @{$self->{searchlist}};
+	$self->domain( $self->searchlist ) unless $self->{domain};
+	%$base = %$self;
 	return $self;
 }
 
@@ -235,14 +239,16 @@ sub read_config_file {
 	local $_;
 
 	while (<FILE>) {
+		s/[;#].*$//;					# strip comments
+
 		/^nameserver/ && do {
-			my ( $keyword, @ip ) = split;
-			push @ns, map { $_ eq '0' ? '0.0.0.0' : $_ } @ip;
+			my ( $keyword, @ip ) = grep defined, split;
+			push @ns, map $_ eq '0' ? '0.0.0.0' : $_, @ip;
 			next;
 		};
 
 		/^option/ && do {
-			my ( $keyword, $option ) = split;
+			my ( $keyword, $option ) = grep defined, split;
 			my ( $name, $val ) = split( m/:/, $option, 2 );
 			my $attribute = $resolv_conf{$name};
 			$val = 1 unless defined $val;
@@ -251,13 +257,13 @@ sub read_config_file {
 		};
 
 		/^domain/ && do {
-			my ( $keyword, $domain ) = split;
+			my ( $keyword, $domain ) = grep defined, split;
 			$config->domain($domain);
 			next;
 		};
 
 		/^search/ && do {
-			my ( $keyword, @searchlist ) = split;
+			my ( $keyword, @searchlist ) = grep defined, split;
 			$config->searchlist(@searchlist);
 			next;
 		};
@@ -1452,44 +1458,21 @@ sub _create_tcp_socket {
 }
 
 
-# Lightweight versions of subroutines from Net::IP module, recoded to fix rt#28198
+# Lightweight versions of subroutines from Net::IP module, recoded to fix RT#96812
 
 sub _ip_is_ipv4 {
-	my @field = split /\./, shift;
-
-	return 0 if @field > 4;					# too many fields
-	return 0 if @field == 0;				# no fields at all
-
-	foreach (@field) {
-		return 0 unless /./;				# reject if empty
-		return 0 if /[^0-9]/;				# reject non-digit
-		return 0 if $_ > 255;				# reject bad value
-	}
-
-	return 1;
+	return shift =~ /^[0-9.]+\.[0-9]+$/;			# dotted digits
 }
 
 
 sub _ip_is_ipv6 {
 
 	for (shift) {
-		my @field = split /:/;				# split into fields
-		return 0 if ( @field < 3 ) or ( @field > 8 );
-
-		return 0 if /::.*::/;				# reject multiple ::
-
-		if (/\./) {					# IPv6:IPv4
-			return 0 unless _ip_is_ipv4( pop @field );
-		}
-
-		foreach (@field) {
-			next unless /./;			# skip ::
-			return 0 if /[^0-9a-f]/i;		# reject non-hexdigit
-			return 0 if length $_ > 4;		# reject bad value
-		}
+		return 1 if /^[:0-9a-f]+:[0-9a-f]*$/i;		# mixed : and hexdigits
+		return 1 if /^[:0-9a-f]+:[0-9.]+$/i;		# prefix + dotted digits
 	}
 
-	return 1;
+	return 0;
 }
 
 
